2008-03-03  Vincent Untz  <vuntz@gnome.org>

	Display sunrise/sunset in local (to the location) time.
	Fix bug #518106. Patch by Matthias Clasen <mclasen@redhat.com>

	* clock-location-tile.[ch]: (weather_info_setup_tooltip): hack to
	display the sunrise/sunset in local time
	(weather_tooltip): update
	* clock.c: (weather_tooltip): update

2008-02-28  David Zeuthen  <davidz@redhat.com>

	* set-timezone.c (can_do): Don't hardcode the polkit results for
	determining when we can authenticate to gain an
	authorization. This fixes a bug where ONE_SHOT auths weren't
	handled because PolKitResult enumerations for these were added
	after this code was written.
	(get_pk_context): Integrate libpolkit into the main loop. Need
	this to refresh the authorization cache. This fixes a bug where
	the Set buttons were not updated. Now it works as expected, e.g.
	the "Set..." becomes a "Set" if you gain the authorization (and
	it's not a one shot one)
	(pk_io_remove_watch_fn, pk_io_add_watch_fn)
	(pk_io_watch_have_data): libpolkit mainloop integration functions.

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (clock_migrate_to_26): fix previous commit to not break the
	build

2008-02-28  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (clock_migrate_to_26): don't set the format key if we're
	reaching this without really migrating from 2.6 but because the value
	is just non-sense. Fix a crash, bug #518963.

2008-02-26  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am (check): Validate PolicyKit policy files.

==================== 2.21.92 ====================

2008-02-20  Matthias Clasen  <mclasen@redhat.com>

	* clock-location-tile.c: Try harder to avoid resizing
	the popup. 

	* clock.c: Refresh the tiles when the timezone changes.

2008-02-20  Matthias Clasen  <mclasen@redhat.com>

	* clock-location.c (clock_location_get_offset): Take daylight
	savings time into account.

2008-02-18  Matthias Clasen  <mclasen@redhat.com>
