@@ -266,6 +266,9 @@ clock_location_tile_fill (ClockLocationTile *this)
 	GtkWidget *align;
         GtkWidget *strut;
         GtkWidget *box;
+        GtkWidget *alignment;
+        GtkWidget *tile;
+        GtkWidget *head_section;
 	gint can_set;
 
         priv->box = gtk_event_box_new ();
@@ -278,11 +281,11 @@ clock_location_tile_fill (ClockLocationTile *this)
         g_signal_connect (priv->box, "leave-notify-event",
                           G_CALLBACK (enter_or_leave_tile), this);
 
-        GtkWidget *alignment = gtk_alignment_new (0, 0, 1, 0);
+        alignment = gtk_alignment_new (0, 0, 1, 0);
         gtk_alignment_set_padding (GTK_ALIGNMENT (alignment), 3, 3, 3, 0);
 
-        GtkWidget *tile = gtk_hbox_new (FALSE, 6);
-        GtkWidget *head_section = gtk_vbox_new (FALSE, 0);
+        tile = gtk_hbox_new (FALSE, 6);
+        head_section = gtk_vbox_new (FALSE, 0);
 
         priv->city_label = gtk_label_new (NULL);
         gtk_misc_set_alignment (GTK_MISC (priv->city_label), 0, 0);
